fix vertical alignment across all sections to be conistent

--- a/premedia/edetailers/index.html
+++ b/premedia/edetailers/index.html
@@ -8,6 +8,12 @@
 	<link rel="stylesheet" type="text/css" href="./css/bbslider.css">
 	<link rel="stylesheet" type="text/css" href="./css/jvectormap.2.0.5.css">
 	<link rel="stylesheet" type="text/css" href="./css/style.css">
+	<script type="text/javascript" src="./js/jquery.slimish.min.js"></script>
+	<script type="text/javascript" src="./js/fullpage.min.js"></script>
+	<script type="text/javascript" src="./js/jquery.bbslider.custom.min.js"></script>
+	<script type="text/javascript" src="./js/jquery.keyframes.min.js"></script>
+	<script type="text/javascript" src="./js/jvectormap.2.0.5.min.js"></script>
+	<script type="text/javascript" src="./js/jvector.world.min.js"></script>
 </head>
 <body class="preload">
 	<nav>
@@ -18,13 +24,13 @@
 				</div>
 			</div>
 			<div class="right" id="navigation-menu">
-				<div data-menuanchor="eDetailers" class="nav-item"><a href="#eDetailers">eDetailing</a></div>
-				<div data-menuanchor="certifications" class="nav-item"><a href="#certifications">Certifications</a></div>
-				<div data-menuanchor="services" class="nav-item"><a href="#services">Services</a></div>
-				<div data-menuanchor="how-we-work" class="nav-item"><a href="#how-we-work">How We Work</a></div>
-				<div data-menuanchor="map" class="nav-item"><a href="#map">Clients</a></div>
-				<div data-menuanchor="about" class="nav-item"><a href="#about">About Us</a></div>
-				<div data-menuanchor="contact" class="nav-item"><a href="#contact">Contact</a></div>
+				<span data-menuanchor="eDetailers" class="nav-item"><a href="#eDetailers">eDetailing</a></span>
+				<span data-menuanchor="certifications" class="nav-item"><a href="#certifications">Certifications</a></span>
+				<span data-menuanchor="services" class="nav-item"><a href="#services">Services</a></span>
+				<span data-menuanchor="how-we-work" class="nav-item"><a href="#how-we-work">How We Work</a></span>
+				<span data-menuanchor="map" class="nav-item"><a href="#map">Clients</a></span>
+				<span data-menuanchor="about" class="nav-item"><a href="#about">About Us</a></span>
+				<span data-menuanchor="contact" class="nav-item"><a href="#contact">Contact</a></span>
 			</div>
 		</div>
 	</nav>
@@ -84,7 +90,7 @@
 				</div>
 			</div>
 		</div>
-		<div id="certifications-section" class="section no-vert">
+		<div id="certifications-section" class="section">
 			<div class="container">
 				<div class="section-title">
 					<h2><span class="light-blue-underline">Certifications</span></h2>
@@ -279,7 +285,7 @@
 				</div>
 			</div>
 		</div>
-		<div  id="contact-section" class="section no-vert">
+		<div  id="contact-section" class="section">
 			<div class="container">
 				<h2><span class="light-blue-underline">Let’s work together</span></h2>
 			</div>
@@ -333,12 +339,6 @@
 			</div>
 		</div>
 	</div>
-	<script type="text/javascript" src="./js/jquery.slimish.min.js"></script>
-	<script type="text/javascript" src="./js/fullpage.min.js"></script>
-	<script type="text/javascript" src="./js/jquery.bbslider.custom.min.js"></script>
-	<script type="text/javascript" src="./js/jquery.keyframes.min.js"></script>
-	<script type="text/javascript" src="./js/jvectormap.2.0.5.min.js"></script>
-	<script type="text/javascript" src="./js/jvector.world.min.js"></script>
 	<script type="text/javascript" src="./js/scripts.js"></script>
 </body>
 </html>
