update country list

--- a/premedia/edetailers/index.html
+++ b/premedia/edetailers/index.html
@@ -59,7 +59,7 @@
 					<h1>A Global eDetailing Development Partner to Brands and Agencies</h1>
 					<p>We collaborate seamlessly with companies and local agencies to develop, localise, adapt and distribute visual aids using the platform of your choice.</p>
 					<p>We understand that local agencies often understand the local market best, and recommend that design and strategy is done by them.</p>
-					<button class="btn light-blue">
+					<button class="btn light-blue" onclick="location.href='#contact'">
 						Request a Demo
 					</button>
 				</div>
@@ -230,7 +230,7 @@
 					</div>
 				</div>
 				<div class="btn-container">
-					<button class="btn">Get in Touch</button>
+					<button class="btn" onclick="location.href='#contact'">Get in Touch</button>
 				</div>
 			</div>
 		</div>
