reverse conditional fullpageJS loading

--- a/premedia/edetailers/index.html
+++ b/premedia/edetailers/index.html
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" type="text/css" href="./css/jvectormap.2.0.5.css">
 	<link rel="stylesheet" type="text/css" href="./css/style.css">
 	<script type="text/javascript" src="./js/jquery.slimish.min.js"></script>
-	<!-- <script type="text/javascript" src="./js/fullpage.min.js"></script> -->
+	<script type="text/javascript" src="./js/fullpage.min.js"></script>
 	<script type="text/javascript" src="./js/jquery.bbslider.custom.min.js"></script>
 	<script type="text/javascript" src="./js/jquery.keyframes.min.js"></script>
 	<script type="text/javascript" src="./js/jvectormap.2.0.5.min.js"></script>
