change button hover styles and corners

--- a/premedia/edetailers/index.html
+++ b/premedia/edetailers/index.html
@@ -339,7 +339,7 @@
 							<div class="row">
 								<div class="input-container full-width">
 									<div id="error-message">&nbsp;</div>
-									<textarea name="message" placeholder="Hi I would like"></textarea>
+									<textarea name="message" placeholder="Hello there..."></textarea>
 									<label for="message">Message *</label>
 								</div>
 							</div>
