change navbar instantly on href click, QoL changes"

--- a/premedia/edetailers/index.html
+++ b/premedia/edetailers/index.html
@@ -16,22 +16,22 @@
 	<script type="text/javascript" src="./js/jvectormap.2.0.5.min.js"></script>
 	<script type="text/javascript" src="./js/jvector.world.min.js"></script>
 </head>
-<body class="dark-bg">
+<body>
 	<nav>
-		<div class="nav-container">
+		<div class="nav-container dark-bg">
 			<div class="left">
 				<div class="nav-logo">
 					<img src="./img/vakils-logo.png">
 				</div>
 			</div>
 			<div class="right" id="navigation-menu">
-				<span data-name="eDetailers" class="nav-item"><a href="#eDetailers">eDetailing</a></span>
-				<span data-name="certifications" class="nav-item"><a href="#certifications">Certifications</a></span>
-				<span data-name="services" class="nav-item"><a href="#services">Services</a></span>
-				<span data-name="how-we-work" class="nav-item"><a href="#how-we-work">How We Work</a></span>
-				<span data-name="map" class="nav-item"><a href="#map">Clients</a></span>
-				<span data-name="about" class="nav-item"><a href="#about">About Us</a></span>
-				<span data-name="contact" class="nav-item"><a href="#contact">Contact</a></span>
+				<span data-name="eDetailers" class="nav-item"><a onclick='checkNavbarBG(this)' href="#eDetailers">eDetailing</a></span>
+				<span data-name="certifications" class="nav-item"><a onclick='checkNavbarBG(this)' href="#certifications">Certifications</a></span>
+				<span data-name="services" class="nav-item"><a onclick='checkNavbarBG(this)' href="#services">Services</a></span>
+				<span data-name="how-we-work" class="nav-item"><a onclick='checkNavbarBG(this)' href="#how-we-work">How We Work</a></span>
+				<span data-name="map" class="nav-item"><a onclick='checkNavbarBG(this)' href="#map">Clients</a></span>
+				<span data-name="about" class="nav-item"><a onclick='checkNavbarBG(this)' href="#about">About Us</a></span>
+				<span data-name="contact" class="nav-item"><a onclick='checkNavbarBG(this)' href="#contact">Contact</a></span>
 			</div>
 		</div>
 	</nav>
