fix certification broken layout

--- a/premedia/edetailers/index.html
+++ b/premedia/edetailers/index.html
@@ -109,11 +109,11 @@
 			</div>
 		</div>
 		<div id="certifications" class="section">
-			<div class="section-title">
-				<h2><span class="light-blue-underline">Certifications</span></h2>
-			</div>
-			<div class="container desktop">
-				<div class="grid column-center ">
+			<div class="container">
+				<div class="section-title">
+					<h2><span class="light-blue-underline">Certifications</span></h2>
+				</div>
+				<div class="grid column-center desktop">
 					<div class="column">
 						<div class="cert-logo-container" onclick="openCertModal(this, 'veeva')">
 							<img onclick="openCertModal(this, 'veeva')" src="./img/cert/veeva_logo.png">
